# drakkar

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  Thumbs.db  about.cpp  about.h  about_view.cpp  about_view.h  action_type.cpp  action_type.h  coastal_world.map  codecov.yml  color.cpp  color.h  coordinate.cpp  coordinate.h  enemy.cpp  enemy.h  enemy_behavior_type.cpp  enemy_behavior_type.h  environment.cpp  environment.h  environment_type.cpp  environment_type.h  envrionment_type.cpp  event_log.cpp  event_log.h  event_type.cpp  event_type.h  fairytale.md  faq.md  food.cpp  food.h  food_state.cpp  food_state.h  (+81 more)
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: check.yaml  check_links.yaml  hosted-pure-workflow.yml  vcpkg_cmake_build.yml
debug/: qrc_game_resources.cpp
doc/: 20210622_tresinformal_evaluation.md  20211215_retrospective.md  20211215_tresinformal_evaluation.md  20220802_tresinformal_evaluation.csv  20220802_tresinformal_evaluation.md  20220802_tresinformal_evaluation.xlsx  cpp_core_guideline_of_the_month.md  game_design.md  how_to_tdd.md  roadmap.md
pics/: Thumbs.db
resources/: README.md  game_resources.qrc
scripts/: check_clang-format  check_dead_links  do_clang-format  do_clang_tidy  do_oclint  get_code_cov  get_code_cov.sh  install_oclint  merge_all_to_richel
src/: CMakeLists.txt  about.cpp  about.h  about_view.cpp  about_view.h  action_type.cpp  action_type.h  color.cpp  color.h  coordinate.cpp  coordinate.h  enemy.cpp  enemy.h  enemy_behavior_type.cpp  enemy_behavior_type.h  environment.cpp  environment.h  environment_type.cpp  environment_type.h  event_type.cpp  event_type.h  food.cpp  food.h  food_state.cpp  food_state.h  food_type.cpp  food_type.h  game.cpp  game.h  game_functions.cpp  game_functions.h  game_helpers.h  game_options.cpp  game_options.h  game_resources.cpp  game_resources.h  game_view.cpp  game_view.h  key_action_map.cpp  key_action_map.h  (+35 more)
